fix: 예외코드 설정